Added category page.

--- a/home.html
+++ b/home.html
@@ -279,7 +279,9 @@
                 <script type="text/javascript" src="assets/jssor/jssor.home.js"></script>
 
                 <!-- Slick Slider Carousal -->
-                <script type="text/javascript" src="assets/slick/slick.js"></script>                                
+                <script type="text/javascript" src="assets/slick/slick.js"></script>    
+                <script type="text/javascript" src="assets/js/jquery.slides.min.js"></script> 
+                <script type="text/javascript" src="assets/js/totop.js"></script>                           
                                        
 </body>
     <script type="text/javascript" src="assets/js/angular/angular.min.js"></script>
