View 2.0 : Full angular integration

--- a/header.html
+++ b/header.html
@@ -11,13 +11,7 @@
                     		<div class="col-md-4">
                         		<a class="navbar-brand" href="home.html"><img src="assets/img/brand/logo1.png" ></a>
                         	</div> 
-                        	<div class="col-md-offset-5 col-md-3 pull-right">
-                        		<br><br><br>
-                        		<font color="white" size="2px">&nbsp;&nbsp;&nbsp; Follow us On : </font>&nbsp;&nbsp;
-                          		<a href="https://www.facebook.com/Essotglobal" target="_blank"><img src="assets/img/social/FACEBOOK.png" data-toggle="tooltip" data-placement="top" title="Facebook Page"/></a> &nbsp;
-                          		<a href="https://twitter.com/essotglobal" target="_blank"><img src="assets/img/social/TWITTER.png" data-toggle="tooltip" data-placement="top" title="Twitter Page"/></a> &nbsp;
-                         		<a href="https://youtube.com/" target="_blank"><img src="assets/img/social/YOU_TUBE.png" data-toggle="tooltip" data-placement="top" title="YouTube Page"/></a>
-                         	</div> 
+                        	<div class="col-md-offset-5 col-md-3 pull-right"></div> 
                          </div> 
                     </div>
                 
@@ -37,13 +31,13 @@
                                 <ul class="nav navbar-nav" ng-show='$parent.menuList.menu.length > 0'>                                    
                                     <!-- Tabs -->
                                     <li ng-repeat-start="menuItem in $parent.menuList.menu" class="dropdown menulabel"> 
-                                    	<a href="#" data-toggle="dropdown" class="dropdown-toggle" ng-bind='menuItem.categoryName'></a>
+                                    	<a href="category.html"  class="dropdown-toggle" ng-bind='menuItem.categoryName'></a>
                                         <ul class="dropdown-menu" ng-show='menuItem.subCategories.length > 0'>
                                         	<li ng-repeat-start="subItem in menuItem.subCategories">
-                                        		<a href="#" data-toggle="dropdown" class="dropdown-toggle" ng-bind='subItem.categoryName'></a>
+                                        		<a href="category.html"  class="dropdown-toggle" ng-bind='subItem.categoryName'></a>
                                         		<ul class="dropdown-menu sub-menu" ng-show='subItem.subCategories.length > 0'>
 		                                        	<li ng-repeat-start="item in subItem.subCategories">
-		                                        		<a href="#" data-toggle="dropdown" class="dropdown-toggle" ng-bind='item.categoryName'></a>
+		                                        		<a href="category.html"  class="dropdown-toggle" ng-bind='item.categoryName'></a>
 		                                        	</li>
                                                     <li ng-if="!$last" ng-repeat-end class="divider"></li>
                                         		</ul>
