--- a/home.html
+++ b/home.html
@@ -65,7 +65,7 @@
 
                     <!-- Slides Container -->
                     <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 800px; height: 356px; overflow: hidden;">
-                        <div ng-repeat="item in displayCatalogues.categories" ng-init="init($last);">
+                        <div ng-repeat="item in displayItems.categories" ng-init="init($last);">
                             <img u="image" src="http://placehold.it/1020x456">
                             <img u="thumb" src="http://placehold.it/181x95" />
                         </div>                        
@@ -110,9 +110,9 @@
                             <section id="feature blue">
                                 
                                     <div class="slider fadebox fade1">
-                                        <div ng-repeat="item in displayCatalogues.categories" fadebox-init-directive>
+                                        <div ng-repeat="item in displayItems.topProducts | limitTo:6 | limitTo : 3" fadebox-init-directive>
                                             <div class="image">
-                                                <img src="/marketing/image/{{item.categoryName}}.jpg">
+                                                <img src="http://placehold.it/550x510">
                                             </div>
                                         </div>
                                     </div>
@@ -125,7 +125,7 @@
                               <section id="features blue">
                                 
                                     <div class="slider fadebox fade2">
-                                        <div ng-repeat="item in displayCatalogues.categories" fadebox-second-init-directive>
+                                        <div ng-repeat="item in displayItems.topProducts | limitTo:6 | limitTo:-3" fadebox-second-init-directive>
                                             <div class="image">
                                                 <img src="http://placehold.it/550x510">
                                             </div>
@@ -147,8 +147,8 @@
                             </div>
 
                             <div class="slider responsive">
-                                <div ng-repeat="item in displayCatalogues.categories" slider-repeat-directive>
-                                   <a href="#"><img src="http://placehold.it/270x270" class="img-responsive"></a>
+                                <div ng-repeat="item in displayItems.topProducts | limitTo:10" slider-repeat-directive>
+                                   <a href="product.html"><img src="http://placehold.it/270x270" class="img-responsive"></a>
                                 </div>                                
                             </div>
                         </div>
