--- a/header.html
+++ b/header.html
@@ -11,7 +11,13 @@
                     		<div class="col-md-4">
                         		<a class="navbar-brand" href="home.html"><img src="assets/img/brand/logo1.png" ></a>
                         	</div> 
-                        	<div class="col-md-offset-5 col-md-3 pull-right"></div> 
+                        	<div class="col-md-offset-5 col-md-3 pull-right">
+                             <br><br>
+                                <font color="white" size="2px">&nbsp;&nbsp;&nbsp; Join Us On : </font>&nbsp;&nbsp;
+                                <a href="https://www.facebook.com/Essotglobal" target="_blank"><img src="assets/img/social/FACEBOOK.png" data-toggle="tooltip" data-placement="top" title="Facebook Page"/></a> &nbsp;
+                                <a href="https://twitter.com/essotglobal" target="_blank"><img src="assets/img/social/TWITTER.png" data-toggle="tooltip" data-placement="top" title="Twitter Page"/></a> &nbsp;
+                                <a href="https://youtube.com/" target="_blank"><img src="assets/img/social/YOU_TUBE.png" data-toggle="tooltip" data-placement="top" title="YouTube Page"/></a>   
+                            </div> 
                          </div> 
                     </div>
                 
@@ -48,7 +54,7 @@
                                     <li ng-if="!$last" ng-repeat-end class="divider-vertical"></li>
                                 </ul>
                             <!-- /.nav -->
-                            <div class="col-md-offset-5 col-md-3 pull-right" style="padding: 5px 5px 0px 0px;">
+                            <div class="col-md-offset-5 col-md-3 pull-right" style="padding: 4px 5px 0px 0px;">
                             	<div class="block">
 									<form ng-submit="search()">
 									   <input type="text" ng-model="$parent.searchText" placeholder="Search EssotGlobal" id="tipue_drop_input" autocomplete="off" required>
