--- a/home.html
+++ b/home.html
@@ -55,8 +55,7 @@
 
                     <!-- Loading Screen -->
                     <div u="loading" style="position: absolute; top: 0px; left: 0px;">
-                        <div style="filter: alpha(opacity=70); opacity:0.7; position: absolute; display: block;
-                            background-color: #000000; top: 0px; left: 0px;width: 100%;height:100%;">
+                        <div style="filter: alpha(opacity=70); opacity:0.7; position: absolute; display: block;top: 0px; left: 0px;width: 100%;height:100%;">
                         </div>
                         <div style="position: absolute; display: block; background: url(assets/img/loading.gif) no-repeat center center;
                             top: 0px; left: 0px;width: 100%;height:100%;">
@@ -66,7 +65,7 @@
                     <!-- Slides Container -->
                     <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 800px; height: 356px; overflow: hidden;">
                         <div ng-repeat="item in displayItems.categories" ng-init="init($last);">
-                            <img u="image" src="http://placehold.it/1020x456">
+                            <a u="image" href="#"><img u="image" src="http://placehold.it/1020x456"></a>
                             <img u="thumb" src="http://placehold.it/240x95" />
                         </div>                        
                     </div>
@@ -112,7 +111,7 @@
                                     <div class="slider fadebox fade1">
                                         <div ng-repeat="item in displayItems.topProducts | limitTo:6 | limitTo : 3" fadebox-init-directive>
                                             <div class="image">
-                                                <img src="http://placehold.it/550x510">
+                                                <a href="#"><img src="http://placehold.it/550x510"></a>
                                             </div>
                                         </div>
                                     </div>
@@ -127,7 +126,7 @@
                                     <div class="slider fadebox fade2">
                                         <div ng-repeat="item in displayItems.topProducts | limitTo:6 | limitTo:-3" fadebox-second-init-directive>
                                             <div class="image">
-                                                <img src="http://placehold.it/550x510">
+                                                <a href="#"><img src="http://placehold.it/550x510"></a>
                                             </div>
                                         </div>                                        
                                     </div>
