--- a/category.html
+++ b/category.html
@@ -49,7 +49,11 @@
 
     <div class="container">
         <div id="slides">
-            <img ng-repeat="slideItem in productData.bannerList" u="image" ng-src="/marketing/image/{{slideItem}}/{{slideItem}}_banner.jpg" slide-repeat-directive>
+            <div ng-repeat="slideItem in productData.bannerList" slide-repeat-directive>
+                <a  href="product.html" >
+                    <img u="image" ng-src="http://placehold.it/1020x456">
+                </a>
+            </div>
             <a href="#" class="slidesjs-previous slidesjs-navigation"><i class="fa-chevron-left icon-large"></i></a>
             <a href="#" class="slidesjs-next slidesjs-navigation"><i class="fa-chevron-right icon-large"></i></a>
         </div>
@@ -82,7 +86,7 @@
                                     
                                     <div class="productinfo text-center">
                                         <!--<img u="image" ng-src="http://placehold.it/270x250"/> -->
-                                        <img u="image" ng-src="/marketing/image/{{productItem.skuName}}/{{productItem.skuName}}_medium.jpg"/>
+                                        <img u="image" ng-src="http://placehold.it/270x250"/>
                                         <p ng-bind="productItem.name"></p>
                                     </div>
                                     
