Added for anchor tag in you may like section.

--- a/product.html
+++ b/product.html
@@ -193,7 +193,9 @@
                                         <div class="product-image-wrapper">
                                             <div class="single-products">
                                                 <div class="productinfo text-center">
-                                                    <img src="http://placehold.it/310x150" alt="" />
+                                                    <a href="#">
+                                                        <img src="http://placehold.it/310x150" alt="" />
+                                                    </a>
                                                     <h3 style="font-family:rupee;font-size:20px" ng-bind="product.relProdPrice| currency:'R '" ></h3>
                                                     <p ng-bind="product.relProdName"></p>
                                                     <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
