--- a/product.html
+++ b/product.html
@@ -193,12 +193,13 @@
                                         <div class="product-image-wrapper">
                                             <div class="single-products">
                                                 <div class="productinfo text-center">
-                                                    <a href="#">
+                                                    <a href="product.html" target="_self">
                                                         <img src="http://placehold.it/310x150" alt="" />
                                                     </a>
                                                     <h3 style="font-family:rupee;font-size:20px" ng-bind="product.relProdPrice| currency:'R '" ></h3>
-                                                    <p ng-bind="product.relProdName"></p>
-                                                    <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
+                                                    <h2 ng-bind="product.relProdName"> </h2>
+                                                    <!--<p ng-bind="product.relProdName"></p> -->
+                                                    <!--<button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button> -->
                                                 </div>
                                             </div>
                                         </div>
