--- a/header.html
+++ b/header.html
@@ -52,13 +52,13 @@
                             <ul class="nav navbar-nav" ng-show='$parent.menuList.menu.length > 0'>
                                 <!-- Tabs -->
                                 <li ng-repeat-start="menuItem in $parent.menuList.menu" class="dropdown menulabel">
-                                    <a href="category.html" class="dropdown-toggle" ng-bind='menuItem.categoryName'></a>
+                                    <a href="category.html" target="_self" class="dropdown-toggle" ng-bind='menuItem.categoryName'></a>
                                     <ul class="dropdown-menu" ng-show='menuItem.subCategories.length > 0'>
                                         <li ng-repeat-start="subItem in menuItem.subCategories">
-                                            <a href="category.html" class="dropdown-toggle" ng-bind='subItem.categoryName'></a>
+                                            <a href="category.html" target="_self" class="dropdown-toggle" ng-bind='subItem.categoryName'></a>
                                             <ul class="dropdown-menu sub-menu" ng-show='subItem.subCategories.length > 0'>
                                                 <li ng-repeat-start="item in subItem.subCategories">
-                                                    <a href="category.html" class="dropdown-toggle" ng-bind='item.categoryName'></a>
+                                                    <a href="category.html" target="_self" class="dropdown-toggle" ng-bind='item.categoryName'></a>
                                                 </li>
                                                 <li ng-if="!$last" ng-repeat-end class="divider"></li>
                                             </ul>
