--- a/search.html
+++ b/search.html
@@ -73,13 +73,13 @@
                           <br>  
 
                         <div ng-repeat="product in data.result" class="col-sm-4">
-                            <a href="product.html">
+                            <a href="product.html" target="_self">
                             <div class="product-image-wrapper">
                                 <div class="single-products">
                                     
                                     <div class="productinfo text-center">
                                         <!--<img u="image" ng-src="http://placehold.it/270x250"/> -->
-                                        <img u="image" ng-src="/marketing/image/{{product.productDetails.skuName}}/{{product.productDetails.skuName}}_medium.jpg"/>
+                                        <img u="image" ng-src="http://placehold.it/270x250"/>
                                         <h3 ng-bind="product.productDetails.name"></h3>
                                     </div>
                                     
