--- a/search.html
+++ b/search.html
@@ -60,7 +60,7 @@
 
     <!-- Category Products-->
 
-    <section class="searchbody">
+    <section>
         <div class="container">
             <div class="row">
 
@@ -73,7 +73,7 @@
                           <br>  
 
                         <div ng-repeat="product in data.result" class="col-sm-4">
-                            <a href="product.html" target="_self">
+                            <a href="product.html#/{{product.productDetails.skuName}}" target="_self">
                             <div class="product-image-wrapper">
                                 <div class="single-products">
                                     
