--- a/category.html
+++ b/category.html
@@ -86,7 +86,7 @@
                                     
                                     <div class="productinfo text-center">
                                         <!--<img u="image" ng-src="http://placehold.it/270x250"/> -->
-                                        <img u="image" ng-src="http://placehold.it/270x250"/>
+                                        <img u="image" ng-src="assets/img/{{productItem.skuName}}/{{productItem.skuName}}_medium.jpg"/>
                                         <p ng-bind="productItem.name"></p>
                                     </div>
                                     
