--- a/product.html
+++ b/product.html
@@ -63,7 +63,7 @@
                               <!-- Wrapper for slides -->
                                 <div class="carousel-inner">
                                     <div class="item active">
-                                      <img ng-repeat="image in thumbImages.images" ng-src="http://placehold.it/85x85" ng-mouseover="toggleEnCode($index)" alt="">
+                                      <img ng-repeat="image in thumbImages.images" ng-src="assets/img/{{productData.details.productDetails.skuName}}/{{image}}" ng-mouseover="toggleEnCode($index)" alt="">
                                     </div>
                                 </div>
 
