--- a/search.html
+++ b/search.html
@@ -79,7 +79,7 @@
                                     
                                     <div class="productinfo text-center">
                                         <!--<img u="image" ng-src="http://placehold.it/270x250"/> -->
-                                        <img u="image" ng-src="http://placehold.it/270x250"/>
+                                        <img u="image" ng-src="assets/img/{{product.productDetails.skuName}}/{{product.productDetails.skuName}}_medium.jpg"/>
                                         <h3 ng-bind="product.productDetails.name"></h3>
                                     </div>
                                     
