some changes for images.

--- a/home.html
+++ b/home.html
@@ -66,7 +66,7 @@
                     <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 800px; height: 356px; overflow: hidden;">
                         <div ng-repeat="item in displayItems.categories" ng-init="init($last);">
                             <a u="image" href="category.html#/{{item.categoryID}}">
-                                <img u="image" src="http://placehold.it/1020x456">
+                                <img u="image" src="assets/img/{{item.categoryName}}.jpg">
                             </a>
                             <img u="thumb" src="http://placehold.it/240x95" />
                         </div>                        
