Home page JSSOR with angular...

--- a/home.html
+++ b/home.html
@@ -63,12 +63,12 @@
                     </div>
 
                     <!-- Slides Container -->
-                    <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 800px; height: 356px; overflow: hidden;">
-                        <div ng-repeat="item in displayItems.categories" ng-init="init($last);">
+                    <div u="slides" id="banner_slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 800px; height: 356px; overflow: hidden;">
+                        <div ng-repeat="item in displayItems.categories">
                             <a u="image" href="category.html#/{{item.categoryID}}">
-                                <img u="image" src="assets/img/{{item.categoryName}}.jpg">
+                                <img u="image" src="http://placehold.it/1020x456" banner-image-directive>
                             </a>
-                            <img u="thumb" src="http://placehold.it/240x95" />
+                            <img u="thumb" src="http://placehold.it/240x95" banner-thumb-directive/>
                         </div>                        
                     </div>
         
