--- a/category.html
+++ b/category.html
@@ -74,7 +74,7 @@
                     <div class="features_items">
                         <!--features_items-->
                          <div class="subpage-title">
-                            <h5>FEATURED PRODUCTS</h5>
+                            <h5 ng-bind="productData.headerText"></h5>
                             </div>
                           <br>  
 
