--- a/product.html
+++ b/product.html
@@ -122,7 +122,7 @@
                                     Add to cart
                                 </button> -->
                                 <div>
-                                        <a href="#" onclick="return popup('https://www.facebook.com/sharer/sharer.php?u={{productLink}}')>Share on Facebook</a>
+                                        <a href="#" ng-click="fbpopup();">Share on Facebook</a>
                                 </div>
 				<!-- <a href=""><img src="assets/img/product-details/share.png" class="share img-responsive"  alt="" /></a> -->
                             </div><!--/product-information-->
